--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
   </head>
   <body>
     <h1>Welcome to my website!</h1>
-    <a href="introduction.html">MY INTRODUCTION</a>
+    <a href="haozi.html">🐭点下这个链接</a>
   </body>
 </html>
