--- a/haozi.html
+++ b/haozi.html
@@ -4,6 +4,6 @@
     <title>舔狗biss</title>
   </head>
   <body>
-    <h1 color='red' size=300% align='middle'>豪子？弟弟罢了</h1>
+    <h1 color="red" size=300% align='middle'>豪子？弟弟罢了</h1>
   </body>
 </html>
