--- a/haozi.html
+++ b/haozi.html
@@ -4,6 +4,6 @@
     <title>舔狗biss</title>
   </head>
   <body>
-    <h1 sytle="color:green;font-size:300%" align='middle'>豪子？弟弟罢了</h1>
+    <h1 font-size=300% align='middle'><font color="green">豪子？弟弟罢了</font></h1>
   </body>
 </html>
